# common-software-module

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: sync-gitee.yml
docs/: compatibility.md  get_started.md
docs/apps/: README.md  common.md
src/smn_cpp/: CMakeLists.txt  package.xml
src/smn_cpp/cmake/: Config.cmake  util.cmake
src/smn_cpp/include/smn_cpp/utils/: log.h  perf.h  time.h
src/smn_cpp/src/smn_cpp/utils/: loguru.cc  time.cc
src/smn_cpp/tests/core/: test_common.cc
tools/: perf.sh
